force-app/main/default/objects/Credential__c/Credential__c.object-meta.xml
<CustomObject>
    <label>Credential</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Credentials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>