force-app/main/default/objects/Credential__c/fields/Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Care_Facility__c</fullName>
    <label>Care Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>