force-app/main/default/objects/Credential__c/fields/Care_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Care_Facility_Name__c</fullName>
    <description>This field exists only for Einstein Analytics to build a list of Account names in the dataflow without referencing the Account object to bypass the restriction on security inheritance with multi-value lookups.</description>
    <formula>Care_Facility__r.Name</formula>
    <label>Care Facility Name</label>
    <type>Text</type>
</CustomField>